--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,6 @@
 name: CTSNC_Christmas
 main: de.Herbystar.CTSNC_Modules.Christmas.Main
-version: 1.3-SNAPSHOT
+version: 1.3
 author: Herbystar
 depend: [CTSNC, TTA]
 description: CTSNC Christmas module!
