--- a/plugin.yml
+++ b/plugin.yml
@@ -1,6 +1,7 @@
 name: CTSNC_Christmas
 main: de.Herbystar.CTSNC_Modules.Christmas.Main
-version: 1.3
+version: 1.4-SNAPSHOT
+api-version: 1.13
 author: Herbystar
 depend: [CTSNC, TTA]
 description: CTSNC Christmas module!
